--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 <body class="mat-typography">
 <app-root></app-root>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>-->
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW04HM25XP"></script>
