chore(index): commented out chatwoot

--- a/src/index.html
+++ b/src/index.html
@@ -51,20 +51,21 @@
 </script>
 
 <!--chat-->
-<script async>
-  (function (d, t) {
-    var BASE_URL = "https://support-01.chottulink.com";
-    var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-    g.src = BASE_URL + "/packs/js/sdk.js";
-    g.defer = true;
-    g.async = true;
-    s.parentNode.insertBefore(g, s);
-    g.onload = function () {
-      window.chatwootSDK.run({
-        websiteToken: 'WC1C5x1mHfuU7fXgmEnaFegt',
-        baseUrl: BASE_URL
-      })
-    }
-  })(document, "script");
-</script>
+<!--<script async>-->
+<!--window.chatwootSettings = {"position":"right","type":"expanded_bubble","launcherTitle":"Chat with us"};-->
+<!--  (function (d, t) {-->
+<!--    var BASE_URL = "https://support-01.chottulink.com";-->
+<!--    var g = d.createElement(t), s = d.getElementsByTagName(t)[0];-->
+<!--    g.src = BASE_URL + "/packs/js/sdk.js";-->
+<!--    g.defer = true;-->
+<!--    g.async = true;-->
+<!--    s.parentNode.insertBefore(g, s);-->
+<!--    g.onload = function () {-->
+<!--      window.chatwootSDK.run({-->
+<!--        websiteToken: 'WC1C5x1mHfuU7fXgmEnaFegt',-->
+<!--        baseUrl: BASE_URL-->
+<!--      })-->
+<!--    }-->
+<!--  })(document, "script");-->
+<!--</script>-->
 </html>
